[profile.stripdebuginfo]
# Used by CI to lower binary size for test artifacts.
inherits = "test"
strip = "debuginfo"

[workspace]
members = [
    "crates/load-test",
    "crates/pathfinder",
    "crates/stark_curve",
    "crates/stark_hash",
    "crates/p2p_proto",
    "crates/p2p_bootstrap",
    "crates/p2p",
]
resolver = "2"
