[package]
name = "p2p_discovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "p2p_discovery"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.56"
env_logger = "0.9.0"
futures = "0.3.21"
libp2p = { version = "0.46.1", default-features = false, features = ["identify", "gossipsub", "noise", "ping", "rendezvous", "dns-tokio", "tcp-tokio", "mplex", "yamux", "websocket"] }
log = "0.4.17"
prost = "0.11.0"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
prost-build = "0.11.0"

[[example]]
name = "register"

[[example]]
name = "server"
